--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@
 .btn{
     width: 100%;
 }
+div h1{
+    font-size: 2rem;
+    font-weight: bold;
+    margin: auto;
+    width: 50%;
+    color: 'yellow';
+    text-align: center;
+    padding: 16px;
+}
